[project]
name = "bean-counter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cktang88", email = "n/a" }
]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bean_counter"]
